--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-test
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    </head>
+    <body>
+
+        <div id="graphDiv"></div>
+        <script src="scripts/visualization.js"></script>
+    </body>
+
+</html>
