--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
 
         <div id="graphDiv"></div>
-        <script src="scripts/visualization.js"></script>
+        <script src="scripts/visualization.js">
+            yeet()
+        </script>
     </body>
 
 </html>
