--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    </head>
-    <body>
-
-        <div id="graphDiv"></div>
-        <script src="scripts/visualization.js"></script>
-    </body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  </head>
+  <body>
+    <div id="graphDiv">
+      <div class="select">
+        Year:
+        <select class="yeardata"> </select>
+      </div>
+    </div>
+    <script src="scripts/visualization.js"></script>
+  </body>
 </html>
