--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="style.css"></link>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title></title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  </head>
+    <script src="http://d3js.org/d3.v3.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="//d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
+</head>
   <body>
     <div id="graphDiv">
-      <div class="select">
+      <div id="select">
         Year:
         <select class="yeardata"> </select>
       </div>
+      <div class="legend3"></div>
     </div>
-    <script src="scripts/visualization.js"></script>
+    <script src="scripts/visualization.js" ></script>
   </body>
 </html>
