--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Dengue Fever Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="http://d3js.org/d3.v3.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="//d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
+    <link href="./mosquitoes.png" rel="icon" type="image/x-icon" />
 </head>
   <body>
     <div id="graphDiv">
