Parsing hospital data csv

--- a/map_visualization/index.html
+++ b/map_visualization/index.html
@@ -6,6 +6,8 @@
         <title>Bangladesh Dengue Fever</title>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script type"text/javascript" src="scripts/map.js"></script>
+        
+        <script type"text/javascript" src="scripts/barchart.js"></script>
         <link rel="stylesheet" href="style/style.css"></link>
 
         <!-- Font styling -->
