--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
-<!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html> <link rel="stylesheet" href="style.css" />
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Dengue Fever Dashboard</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://d3js.org/d3.v3.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="//d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
+    <link href="./mosquitoe.png" rel="icon" type="image/x-icon" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Dengue Fever Dashboard</title>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://d3js.org/d3.v3.js"></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="//d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
-  <link href="./mosquitoe.png" rel="icon" type="image/x-icon" />
-</head>
-
-<body>
-  <div id="parCoordsContain">
-    <div id="legSelectContain">
-      <div id="select">
-        Year:
-        <select class="yeardata"> </select>
+  <body>
+    <div id="parCoordsContain">
+      <script src="scripts/visualization.js"></script>
+      <div id="legSelectContain">
+        <div class="legend3"></div>
+        <div id="select">
+          Year:
+          <select class="yeardata"> </select>
+        </div>
       </div>
-      <div class="legend3"></div>
     </div>
-    <script src="scripts/visualization.js"></script>
-  </div>
-
-</body>
-
+  </body>
 </html>
