--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="//d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
     <link href="./mosquitoe.png" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato' type='text/css' />
   </head>
 
   <body>
