--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div id="parCoordsContain">
-      <script src="scripts/visualization.js"></script>
+
       <div id="legSelectContain">
         <div class="legend3"></div>
         <div id="select">
@@ -30,5 +30,10 @@
         </div>
       </div>
     </div>
+    <div id="bottom">
+      <div id="corr"></div>
+      <div id="line"></div>
+    </div>
+  <script src="scripts/visualization.js"></script>
   </body>
 </html>
