hehehe got the time line to pop up hehehe

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
       <div id="line"></div>
     </div>
   <script src="scripts/visualization.js"></script>
+
+  <div id="ageline"></div>
+  <script src="scripts/agelinegraph.js"></script>
   </body>
 </html>
