finished varibles stuff

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     <div id="bottom">
       <div id="corr"></div>
       <div id="line"></div>
+      <div id="select">
+          Variable 1:
+          <select class="v1"> </select>
+
+          Variable 2:
+          <select class="v2"> </select>
+        </div>
     </div>
   <script src="scripts/visualization.js"></script>
   </body>
