--- a/index.html
+++ b/index.html
@@ -24,53 +24,56 @@
   <!-- WEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE -->
   <body>
     
-    <h1 id="mainTitle"> Dengue Fever Data Visualization</h1>
-    <br>
+    <h1 id="mainTitle">Dengue Fever Data Visualization</h1>
+    <br><br>
+
+    <!-- Description of Project -->
+    <div class="contentBox-even" style="margin: 0 auto; position: relative; display: block;">
+        <h2>About Our Data</h2>
+        <p>
+          This map allows users to correlate between five different variables sdfl sdf sdf dsf sdfa sdf dss
+          sdflkjasdlfkjds fljsd flkasdj flskdjf sdlkfj sdlkfj ldsk
+        </p>
+    </div>
 
     <!-- Parallel Coordinates -->
-
-    <div class="container">
-      <div class="contentBox-2-3">
-          <div id="legSelectContain" style="float:left">
+    <h2>Parallel Coordinates</h2>
+    <div class="contentBox-2-3" style="margin: 0 auto; display: flex;">
+        <div id="parCoordsContain"></div>
+        <div id="legSelectContain" style="float:left">
               <div class="legend3">
                 <div id="dateFilter">
                     <p>Year: <select class="yeardata"></select></p>
                 </div>
               </div>
           </div>
-        <div id="parCoordsContain"></div>
-      </div>
-      <div class="contentBox-1-3">
-          <h2>About yeet</h2>
-          <p>
-            This map allows users to correlate between five different variables HEHEFHHFSDLKFJSDLKFJDSFDSFSDLSDFKLSDJF
-            sdflkjsdlfkjasdlfkjsd
-          </p>
-      </div>
     </div>
 
     <!-- Correlation Charts -->
-  <div id="variableSelect">  
-    <p>
-      Variable 1: <select class="v1"> </select> &nbsp;&nbsp;
-      Variable 2: <select class="v2"> </select>
-    </p>
-  </div>
-  <div class="container">
-    <div class="contentBox-1-3">
-      <div id="corr"></div>
+    <h2>Correlation Charts of Variables</h2>
+    <div id="variableSelect">  
+      <p>
+        Variable 1: <select class="v1"> </select> &nbsp;&nbsp;
+        Variable 2: <select class="v2"> </select>
+      </p>
     </div>
 
-    <div class="contentBox-2-3">
-      <div id="line"></div>
+    <div class="container" style="margin-left: 280px">
+      <div class="contentBox-1-3">
+        <div id="corr"></div>
+      </div>
+
+      <div class="contentBox-2-3">
+        <div id="line"></div>
+      </div>
     </div>
-  </div>
   
   <!-- Age Chart -->
   <div id="ageline"></div>
 
   <!-- Symptom Chart -->
-
+  <br><br><br>
+  <h2>Ratios of Symptoms Per Hospital</h2>
   <div class="container">
     <div class="contentBox-even">
       <div id="infoBox0"></div>
