Many resizing issues but it looks good???

--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
 
     <!-- Description of Project -->
     <div class="contentBox-even" style="margin: 0 auto; position: relative; display: block;">
-        <h2>About Our Data</h2>
+        <h2>About The Data</h2>
         <p>
-          This map allows users to correlate between five different variables sdfl sdf sdf dsf sdfa sdf dss
-          sdflkjasdlfkjds fljsd flkasdj flskdjf sdlkfj sdlkfj ldsk
+          Dengue Fever, a mosquito-borne disease, most commonly occurs in tropical zones. 
+          This fever can induce vomiting, muscle pain, skin rashes, and many more symptoms. 
+          To truly get a better understanding of where Dengue Fever occurs as well as what
+          symptoms commonly occur, we have a few visualizations.
+          <br><br>
+          The datasets for our visualizations was provided to us by Professor Tanzima Islam. The
+          datasets ranged from patient symptom data to number of deaths per year as well a comprehensive
+          list of weather data ranging from 1953 to 2015. The visualizations is follows:
+
         </p>
     </div>
 
@@ -68,34 +75,34 @@
       </div>
     </div>
   
-  <!-- Age Chart -->
-  <div id="ageline"></div>
+    <!-- Age Chart -->
+    <div id="ageline"></div>
 
-  <!-- Symptom Chart -->
-  <br><br><br>
-  <h2>Ratios of Symptoms Per Hospital</h2>
-  <div class="container">
-    <div class="contentBox-even">
-      <div id="infoBox0"></div>
-    </div>
-    <div class="contentBox-even">
-      <div id="infoBox1"></div>
-    </div>
-  </div>
-
-  <div class="container">
+    <!-- Symptom Chart -->
+    <br><br><br>
+    <h2>Ratios of Symptoms Per Hospital</h2>
+    <div class="container">
       <div class="contentBox-even">
-        <div id="infoBox2"></div>
+        <div id="infoBox0"></div>
       </div>
       <div class="contentBox-even">
-        <div id="infoBox3"></div>
+        <div id="infoBox1"></div>
       </div>
+    </div>
+
+    <div class="container">
+        <div class="contentBox-even">
+          <div id="infoBox2"></div>
+        </div>
+        <div class="contentBox-even">
+          <div id="infoBox3"></div>
+        </div>
     </div>
     
 
-  <!-- Scripts  -->
-  <script src="scripts/visualization.js"></script>
-  <script src="scripts/agelinegraph.js"></script>
-  <script src="scripts/barchart.js"></script>
+    <!-- Scripts  -->
+    <script src="scripts/visualization.js"></script>
+    <script src="scripts/agelinegraph.js"></script>
+    <script src="scripts/barchart.js"></script>
   </body>
 </html>
