Last push. Spacing of the keys is janky but that's okay. No more overlap issues we had last time though. Going to turn it in

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Parallel Coordinates</h2>
     <div class="contentBox-2-3" style="margin: 0 auto; display: flex;">
         <div id="parCoordsContain"></div>
-        <div id="legSelectContain" style="float:left">
+        <div id="legSelectContain">
               <div class="legend3">
                 <div id="dateFilter">
                     <p>Year: <select class="yeardata"></select></p>
